--- a/.github/workflows/flaskr-ci.yaml
+++ b/.github/workflows/flaskr-ci.yaml
@@ -1,6 +1,14 @@
 name: Build and Test
 on:
   push:
+    branches:
+      - 'feature/**'
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -32,6 +40,7 @@ jobs:
 
   # Build Docker image in a separate job so that it's not tainted by cached build/test files
   build-image:
+    if: github.event_name == 'pull_request' || github.ref_name == github.event.repository.default_branch
     needs: tests
     permissions:
       # Required permission to push images from main with the built-in GITHUB_TOKEN
@@ -55,6 +64,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: examples/tutorial
-          push: true
+          push: ${{ github.ref_name == github.event.repository.default_branch }}
           tags: "ghcr.io/${{ env.REPO_LOWER_CASE }}:${{ env.SHA_SHORT }}" 
           
